--- a/web/src/css/mode.less
+++ b/web/src/css/mode.less
@@ -183,6 +183,7 @@
                 color: #5f6368;
                 width: 25px;
                 height: 25px;
+                filter: var(--mitmweb-bitmap-icon-filter);
             }
 
             .process-name {
